@@ -77,7 +77,7 @@ typedef int opj_bool; /*FIXME it should be to follow the name of others OPJ_TYPE
 #define OPJ_TRUE 1
 #define OPJ_FALSE 0
 
-// FIXME : should be better defined by configure/CMake test
+/* FIXME : should be better defined by configure/CMake test */
 typedef unsigned int	OPJ_UINT32;
 typedef int				OPJ_INT32;
 typedef unsigned short	OPJ_UINT16;
@@ -89,17 +89,27 @@ typedef double			OPJ_FLOAT64;
 typedef float			OPJ_FLOAT32;
 
 #if (defined(WIN32) || defined(WIN64)) && !defined(__MINGW32__)
+
 typedef signed __int64     OPJ_INT64;
+#define OPJ_INT64_F "I64"
 typedef unsigned __int64   OPJ_UINT64;
+#define OPJ_UINT64_F "I64"
+
 #else
+
 typedef long long          OPJ_INT64;
+#define OPJ_INT64_F "ll"
+
 typedef unsigned long long OPJ_UINT64;
+#define OPJ_UINT64_F "ll"
+
 #endif
 
-/* 64-bit file and blob offset type */
+/* 64-bit file offset type */
 typedef OPJ_INT64 OPJ_OFF_T;
+#define OPJ_OFF_F OPJ_INT64_F
 
-// Avoid compile-time warning because parameter is not used
+/* Avoid compile-time warning because parameter is not used */
 #define OPJ_ARG_NOT_USED(x) (void)(x)
 
 /* 
@@ -1516,11 +1526,7 @@ OPJ_API opj_jp2_metadata_t* OPJ_CALLCONV opj_get_jp2_metadata(opj_codec_t *p_cod
 OPJ_API opj_jp2_index_t* OPJ_CALLCONV opj_get_jp2_index(opj_codec_t *p_codec);
 
 
-/* >>OTB */
-OPJ_API opj_image_t* OPJ_CALLCONV opj_image_create0();
-OPJ_API void opj_copy_image_header(const opj_image_t* p_image_src, opj_image_t* p_image_dest);
-/* <<OTB */
- 
+
 
 
 #ifdef __cplusplus
